# qualia

./: .gitignore  .gitlab-ci.yml  Getting Help.md  README.md  pyproject.toml
.github/workflows/: doc.yml
docker/: README.md  qualia-opensource  qualia-opensource-cuda
docs/: Changelog.md  Components.md  ConfigurationFile.md  Docker.md  Getting Started.md  GettingStarted.md  Installation.md  Update.md  Usage.md  UsingDocker.md  UsingPDM.md  UsingUV.md  conf.py  index.rst
docs/Developer/: AddDataset.md  CodeStyleLinter.md  Documentation.md  PackageStructure.md  PluginArchitecture.md  Plugins.md  RepositoryStructure.md  Tests.md  TypeChecking.md
docs/DeveloperGuide/: AddDataset.md  CodeStyleLinter.md  Documentation.md  PackageStructure.md  RepositoryStructure.md  Tests.md
docs/GettingStarted/: ConfigurationFile.md  GettingStarted.md  GettingStartedSNN.md  Installation.md  SNN.md  Usage.md  UsingDocker.md
docs/PackageManagement/: Update.md  UsingPDM.md
docs/Plugins/: index.rst
docs/Plugins/PluginSNN/: ConfigurationFileSNN.md  EnergyEstimationMetric.md  GettingStartedSNN.md  InstallationSNN.md
docs/ProjectInformation/: Changelog.md
docs/User/: Components.md  ConfigurationFile.md  MigrationPreviousVersions.md  Usage.md
docs/UserGuide/: ConfigurationFile.md  MigrationPreviousVersions.md  Usage.md
docs/_static/css/: style.css
