[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "qualia"
authors = [
    {name = "Pierre-Emmanuel Novac", email = "penovac@unice.fr"},
]
description = "Qualia toolchain"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "qualia-codegen-core>=2.0.0a2.dev10",
]
dynamic = ["version"]

[project.urls]
homepage = "https://naixtech.unice.fr/gitlab/qualia/qualia"

[project.optional-dependencies]

tests = ['pytest', 'pytest-dependency', 'pytest-xdist', 'pytest-env', 'dill', 'filelock']
lint = ['ruff']
typecheck = ['mypy', 'pyright']
docs = ['sphinx', 'sphinx-rtd-theme', 'myst-parser']

[tool.pytest.ini_options]
markers = [
    "deploy: tests requiring deployment on target (deselect with '-m \"not deploy\"')",
]
testpaths = "tests"
env = [
    "CUBLAS_WORKSPACE_CONFIG=:4096:8",
    "PYTHONHASHSEED=2",
]

[tool.pdm]

[[tool.pdm.source]]
name = "qualia-nightly"
url = "https://naixtech.unice.fr/devpi/penovac/qualia-nightly/+simple"
verify_ssl = false

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/qualia-core#egg=qualia-core[pytorch]",
]
[tool.ruff]
extend-exclude = ["third_party"]
select = ["ALL"]
#select = ["E", "F", "B"]
ignore = [
  "ANN101", # Ignore missing type annotation for self in methods
  "ANN102", # Ignore missing type annotation for self in class methods
  "D1", # Ignore missing pydoc
  "N999", # Our module have the same name as the contained class in PascalCase
  "D203", # Prefer D211
  "D213" # D212 is ruff's preference
]
line-length = 131
target-version = "py39"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
files = ["src"]
exclude = ["third_party"]
python_version = 3.9
strict = true
show_column_numbers = true
pretty = true
plugins = "numpy.typing.mypy_plugin"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true
report_progress = true

[tool.pyright]
include = ["src"]
exclude = ["**/third_party", "**/examples"]
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImplicitStringConcatenation = "warning"
reportMissingSuperCall = "warning"
reportPropertyTypeMismatch = "warning"
reportShadowedImports = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedCallResult = "warning"
